tasks/testsuite/fixtures/parser-misc/fail/stmt-class-static-blocks-in-ts-with-invalid-modifier-2.ts
class Foo { static static { 1 + 1 }; }